so bad it hurts

--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -1,17 +1,15 @@
 .box {
   display: flex;
   text-align: center;
-  /* background-color: gold; */
   flex-direction: column;
   justify-content: center;
   height: 50vh;
   width: 50vh;
 }
 
-.all {
-  /* background-color: gray; */
+/* .all {
   height: 70vh;
-}
+} */
 
 .box h1 {
   font-size: 100px;
