--- a/src/components/ItemDetails.css
+++ b/src/components/ItemDetails.css
@@ -1,7 +1,57 @@
 .detail-img {
   border-radius: 5px;
+  /* max-width: 20vw; */
+}
+
+.detail-header {
+  margin-top: 5vh;
+  /* background-color: #1f180742; */
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* padding: 15px;
+  width: 45vw; */
+}
+
+.detail-header-right {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  /* background-color: aqua; */
+  width: 100%;
 }
 
 .detail-title {
-  font-size: 50px;
+  /* margin: 25%; */
+  font-size: 60px;
+  border-bottom: #3e1c13 3px solid;
+}
+
+.detail-button {
+  padding: 1em 2em;
+  background-color: #3e1c13;
+  color: aliceblue;
+  border-radius: 5px;
+}
+
+.detail-text {
+  margin-top: 25vh;
+  margin-bottom: 15vh;
+  max-width: 60vw;
+  font-size: 30px;
+  padding: 0 150px;
+  border-left: #3e1c13 2px solid;
+  border-right: #3e1c13 2px solid;
+}
+
+.your-wk-text {
+  margin-top: 5vh;
+  margin-bottom: 15vh;
+  max-width: 60vw;
+  font-size: 30px;
+  padding: 0 150px;
+  border-left: #3e1c13 2px solid;
+  border-right: #3e1c13 2px solid;
 }
