--- a/src/components/Store.css
+++ b/src/components/Store.css
@@ -1,20 +1,41 @@
+body {
+  height: 100%;
+}
+
 .store {
-  height: 90vh;
-  /* background-color: gray; */
+  margin-top: 8vh;
+  height: 100%;
+  background-color: #f8c63c;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
 .store-item {
-  margin: 5px;
+  margin: 1.5em;
 }
 
 .store h1 {
+  color: aliceblue;
+  padding: 0 0.5em;
   font-size: 70px;
   margin-bottom: -10;
+  border-radius: 5px;
+  background-color: #3e1c13;
+  box-shadow: 5px 10px white;
+}
+
+.store h2 {
+  color: #3e1c13;
+  margin-bottom: 2.5rem;
 }
 
 .store-list {
+  background-color: #3e1c13;
   min-width: 650px;
+  padding: 1em;
+  border: #3e1c13 5px solid;
+  border-radius: 5px;
+  box-shadow: 5px 10px white;
+  margin-bottom: 10vh;
 }
