--- a/src/components/CreateWorkout.css
+++ b/src/components/CreateWorkout.css
@@ -11,19 +11,21 @@ body {
   display: flex;
   background-color: #f8c63c;
   margin: 0;
-  height: 93.15vh;
+  height: 100%;
 }
 
 .tarjeta-create {
   margin: 2em;
+  margin-bottom: 4em;
   background-color: white;
-  width: 500;
+  min-width: 75vw;
   padding: 1.4em 1.8em;
   border-radius: 5px;
-  box-shadow: 5px 10px #3e1c13;
+  box-shadow: 8px 12px #3e1c13;
 }
 
 .img-box-create {
+  margin-top: 2rem;
   border: #808080 1px solid;
   width: auto;
   padding: 15px;
